Remove CSS styling from the image to correct alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,6 @@ section {
 
 #enka {
     float: right;
-    position: relative;
-    right: auto;
 }
 
 .article {
